@@ -18,13 +18,13 @@ test_fb_SOURCES = test-fb.c
 
 # fullscreen blit to gtk drawing area via gtk pixbufs
 test_gdk_SOURCES = test-gdk.c
-test_gdk_LDADD = @GTK_LIBS@
-test_gdk_CFLAGS = @GTK_CFLAGS@
+test_gdk_LDADD = @GTK_LIBS@ @PANGO_LIBS@
+test_gdk_CFLAGS = @GTK_CFLAGS@ @PANGO_CFLAGS@
 
 # fullscreen blit to gtk drawing area via gtk pixbufs in an idle handler
 test_gdk_idle_SOURCES = test-gdk-idle.c
-test_gdk_idle_LDADD = @GTK_LIBS@
-test_gdk_idle_CFLAGS = @GTK_CFLAGS@
+test_gdk_idle_LDADD = @GTK_LIBS@ @PANGO_LIBS@
+test_gdk_idle_CFLAGS = @GTK_CFLAGS@ @PANGO_CFLAGS@
 
 # fullscreen blit to x window via shm
 test_x_SOURCES = test-x.c
@@ -43,8 +43,8 @@ test_freetype_cached_CFLAGS = @FREETYPE_CFLAGS@
 
 # draw strings via xft
 test_xft_SOURCES = test-xft.c
-test_xft_LDADD = @XLIBS_LIBS@
-test_xft_CFLAGS = @XLIBS_CFLAGS@
+test_xft_LDADD = @XLIBS_LIBS@ @PANGO_LIBS@
+test_xft_CFLAGS = @XLIBS_CFLAGS@ @PANGO_CFLAGS@
 
 # draws pango strings with just x
 test_pango_SOURCES = test-pango.c
@@ -55,29 +55,29 @@ test_pango_CFLAGS = @PANGO_CFLAGS@
 
 # Draws a list of Pango glyphs onto a GtkWindow with pango_xft_render
 test_pango_gdk_SOURCES = test-pango-gdk.c
-test_pango_gdk_LDADD = @GTK_LIBS@
-test_pango_gdk_CFLAGS = @GTK_CFLAGS@
+test_pango_gdk_LDADD = @GTK_LIBS@ @PANGO_LIBS@
+test_pango_gdk_CFLAGS = @GTK_CFLAGS@ @PANGO_CFLAGS@
 
 # Draws a list of Pango glyphs onto a GtkDrawingArea with pango_xft_render
 test_pango_gtk_SOURCES = test-pango-gtk.c
-test_pango_gtk_LDADD = @GTK_LIBS@
-test_pango_gtk_CFLAGS = @GTK_CFLAGS@
+test_pango_gtk_LDADD = @GTK_LIBS@ @PANGO_LIBS@
+test_pango_gtk_CFLAGS = @GTK_CFLAGS@ @PANGO_CFLAGS@
 
 # Draws a list of Pango glyphs onto a GtkWindow with gdk_draw_glyphs
 # can probably go
 # test_gtk_SOURCES = test-gtk.c
-# test_gtk_LDADD = @GTK_LIBS@
-# test_gtk_CFLAGS = @GTK_CFLAGS@
+# test_gtk_LDADD = @GTK_LIBS@ @PANGO_LIBS@
+# test_gtk_CFLAGS = @GTK_CFLAGS@ @PANGO_CFLAGS@
 
 
 test_pango_layout_SOURCES = test-pango-layout.c
-test_pango_layout_LDADD = @GTK_LIBS@
-test_pango_layout_CFLAGS = @GTK_CFLAGS@
+test_pango_layout_LDADD = @GTK_LIBS@ @PANGO_LIBS@
+test_pango_layout_CFLAGS = @GTK_CFLAGS@ @PANGO_CFLAGS@
 
 # As above PangoLayout onto a GtkWindow with gdk_draw_layout XXX TOGO ?
 test_gtk_layout_SOURCES = test-gtk-layout.c
-test_gtk_layout_LDADD = @GTK_LIBS@
-test_gtk_layout_CFLAGS = @GTK_CFLAGS@
+test_gtk_layout_LDADD = @GTK_LIBS@ @PANGO_LIBS@
+test_gtk_layout_CFLAGS = @GTK_CFLAGS@ @PANGO_CFLAGS@
 
 
 
